force-app/main/default/objects/Partida_contable__mdt/Partida_contable__mdt.object-meta.xml
<CustomObject>
    <label>Parámetro Partida Contable</label>
    <pluralLabel>Partidas contables</pluralLabel>
</CustomObject>