force-app/main/default/objects/Partida_contable__mdt/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Código</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>