force-app/main/default/objects/Partida_contable__mdt/fields/Cuenta_Credito__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Credito__c</fullName>
    <label>Cuenta Crédito</label>
    <length>30</length>
    <type>Text</type>
</CustomField>