force-app/main/default/objects/Partida_contable__mdt/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripción</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>