force-app/main/default/objects/Partida_contable__mdt/fields/Descripcion_Credito__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Credito__c</fullName>
    <label>Descripción Crédito</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>