force-app/main/default/objects/Partida_contable__mdt/fields/Descripcion_Debito__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Debito__c</fullName>
    <label>Descripción Débito</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>