force-app/main/default/objects/Partida_contable__mdt/fields/Descripcion_Nota__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Nota__c</fullName>
    <label>Descripción Nota</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>