force-app/main/default/objects/Partida_contable__mdt/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>