force-app/main/default/objects/Partida_contable__mdt/fields/Fondo__c.field-meta.xml
<CustomField>
    <fullName>Fondo__c</fullName>
    <label>Fondo</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>