force-app/main/default/objects/Partida_contable__mdt/fields/Id_Banco_Credito__c.field-meta.xml
<CustomField>
    <fullName>Id_Banco_Credito__c</fullName>
    <label>Id Banco Crédito</label>
    <length>10</length>
    <type>Text</type>
</CustomField>