force-app/main/default/objects/Partida_contable__mdt/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <label>Moneda</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>