force-app/main/default/objects/Partida_contable__mdt/fields/N_Doc__c.field-meta.xml
<CustomField>
    <fullName>N_Doc__c</fullName>
    <label>N° Doc.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>