force-app/main/default/objects/Partida_contable__mdt/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <label>Referencia</label>
    <length>30</length>
    <type>Text</type>
</CustomField>