force-app/main/default/objects/Partida_contable__mdt/fields/Sub_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>Sub_Aplicacion__c</fullName>
    <label>Sub Aplicación</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>